build-scripts/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${service}-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  namespace: ${namespace}
  labels:
    app: ${service}
spec:
  type: LoadBalancer
  selector:
    app: ${service}
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http

---

apiVersion: v1
kind: Service
metadata:
  name: ${service}
  namespace: core-qa
  labels:
    app: ${service}
spec:
  type: ClusterIP
  selector:
    app: ${service}
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
    name: http
